perf(render): Only rerender on demand for faster input polling